# hardy-calendar

./: .gitignore  LICENSE  README.md  plan.html  pyproject.toml  sync-plan-to-calendar.py
.github/workflows/: crawler.yml
src/: extractor.py  google_calendar.py  main.py  sync-plan-to-calendar.py
src/hardy_calendar/: __init__.py  crawler.py  extractor.py  google_calendar.py  main.py  orchestrator.py  parser.py
tests/: plan.html  test_crawler.py  test_extractor.py  test_google_calendar.py  test_main.py  test_parser.py  test_parser_smoke.py
